Added SimpleAddressDetails and possibility to go back in address list fetch
