# src/main/kotlin/com/beeftechlabs/model/address/AddressesResponse.kt
@@ -5,7 +5,8 @@ import kotlinx.serialization.Serializable
 @Serializable
 data class AddressesResponse(
     val hasMore: Boolean,
-    val requestId: String,
-    val lastResult: String,
-    val addresses: List<AddressDetails>
+    val requestId: String? = null,
+    val firstResult: String? = null,
+    val lastResult: String? = null,
+    val addresses: List<SimpleAddressDetails>
 )
