# src/main/kotlin/com/beeftechlabs/model/address/SimpleAddressDetails.kt
@@ -1,0 +1,10 @@
+package com.beeftechlabs.model.address
+
+import com.beeftechlabs.model.token.Value
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class SimpleAddressDetails(
+    val address: String,
+    val balance: Value
+)
